# GOLexp_pytroch

./: .dockerignore  .gitignore  CMakeLists.txt  DATASET_GUIDE.md  DOCKER.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  docker-compose.yml  docker-setup.ps1  docker-setup.sh  genData.ps1  genData.sh  requirements.cpu.txt  requirements.txt  setup-gui.ps1  setup-gui.sh
CUDAcode/: GOLdatabase_2.cu  GOLdatabase_2.hpp  GOLdatabase_host.cpp  GOLdatabase_host.hpp  GOLdatagen.cpp  GOLdatagen.cu  d_matrix_2.hpp  utility.hpp
new_project/: cuda_pattern_dataset.py  datagen.py  dataset_config.json  gol_patterns.json  interface.py  interface_cli.py  model.py  model_hyper.json  train.py
new_project/saved_models/: cnn_gol_model1.pth  cnn_gol_model2.pth  cnn_gol_model3.pth  cnn_gol_model4.pth  cnn_gol_model5.pth  cnn_gol_model6_exp.pth  cnn_gol_model6_exp_continued_500.pth  cnn_gol_model6_exp_continued_500_continued_1000.pth  cnn_gol_model7_new.pth  cnn_gol_model8.pth  cnn_gol_model9.pth
new_project/src/: data_loader.py  model.py
train_data/: database-54321_1000_0.010000.txt  database-54321_1000_0.020000.txt  database-54321_1000_0.030000.txt  database-54321_1000_0.040000.txt  database-54321_1000_0.050000.txt  database-54321_1000_0.060000.txt  database-54321_1000_0.070000.txt  database-54321_1000_0.080000.txt  database-54321_1000_0.090000.txt  database-54321_1000_0.100000.txt  database-54321_1000_0.110000.txt  database-54321_1000_0.120000.txt  database-54321_1000_0.130000.txt  database-54321_1000_0.140000.txt  database-54321_1000_0.150000.txt  database-54321_1000_0.160000.txt  database-54321_1000_0.170000.txt  database-54321_1000_0.180000.txt  database-54321_1000_0.190000.txt  database-54321_1000_0.200000.txt  database-54321_1000_0.210000.txt  database-54321_1000_0.220000.txt  database-54321_1000_0.230000.txt  database-54321_1000_0.240000.txt  database-54321_1000_0.250000.txt  database-54321_1000_0.260000.txt  database-54321_1000_0.270000.txt  database-54321_1000_0.290000.txt  database-54321_1000_0.300000.txt  database-54321_1000_0.310000.txt  database-54321_1000_0.320000.txt  database-54321_1000_0.330000.txt  database-54321_1000_0.340000.txt  database-54321_1000_0.350000.txt  database-54321_1000_0.360000.txt  database-54321_1000_0.370000.txt  database-54321_1000_0.380000.txt  database-54321_1000_0.390000.txt  database-54321_1000_0.400000.txt  database-54321_1000_0.410000.txt  (+57 more)
